<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/to2"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toEndOf="@+id/to"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/to2"
        android:layout_width="33dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/from"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/to"
        android:layout_width="33dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/into"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/valuteInput"
        android:layout_width="192dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/input_value"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to2" />

    <TextView
        android:id="@+id/valuteOutput"
        android:layout_width="193dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:text="0.000"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valuteInput" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="375dp"
        android:layout_height="309dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valuteOutput" />



    <Button
        android:id="@+id/button"
        style="@style/Theme.MaterialComponents.Light.Dialog"
        android:layout_width="177dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:shadowColor="@color/colorPrimary"
        android:soundEffectsEnabled="false"
        android:text="@string/convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toEndOf="@+id/valuteInput"
        app:layout_constraintTop_toBottomOf="@+id/to2" />

    <Button
        android:id="@+id/button2"
        style="@style/Theme.MaterialComponents.Light.Dialog"
        android:layout_width="177dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:shadowColor="@color/colorPrimary"
        android:soundEffectsEnabled="false"
        android:text="@string/copy_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/valuteOutput"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>